# cyber-agent

./: Cargo.toml
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: lib.rs  message.rs  provider.rs  transport.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/provider/: Cargo.toml
crates/provider/src/: lib.rs
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: grpc.rs  lib.rs
crates/tool/: Cargo.toml
crates/tool/src/: lib.rs
crates/transport/: Cargo.toml
crates/worker/: Cargo.toml
crates/worker/src/: grpc.rs  lib.rs
tests/: Cargo.toml  e2e_local_server.rs  e2e_real_agent.rs  e2e_real_llm.rs  integration.rs  server_test.rs  worker_test.rs
tests/src/: lib.rs
