[workspace]
resolver = "2"
members = [
    "crates/tool",
    "crates/provider",
    "crates/runner",
    "crates/worker",
    "crates/server",
    "crates/proto",
    "tests",
]

[workspace.dependencies]
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-timer = "3"
