[package]
name = "cyber-agent-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cyber-agent-model = { path = "../crates/model" }
cyber-agent-tool = { path = "../crates/tool" }
cyber-agent-transport = { path = "../crates/transport" }
cyber-agent-protocol = { path = "../crates/protocol" }
cyber-agent-provider = { path = "../crates/provider" }
cyber-agent-runner = { path = "../crates/runner" }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt", "macros"] }
ureq = "2"

[[test]]
name = "integration"
path = "integration.rs"

[[test]]
name = "e2e_real_llm"
path = "e2e_real_llm.rs"

[[test]]
name = "e2e_local_server"
path = "e2e_local_server.rs"

[[test]]
name = "e2e_real_agent"
path = "e2e_real_agent.rs"
