[package]
name = "cyber-agent-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cyber-agent-proto = { path = "../crates/proto" }
cyber-agent-tool = { path = "../crates/tool" }
cyber-agent-provider = { path = "../crates/provider" }
cyber-agent-runner = { path = "../crates/runner" }
cyber-agent-worker = { path = "../crates/worker" }
cyber-agent-server = { path = "../crates/server" }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
ureq = "2"

[[test]]
name = "integration"
path = "integration.rs"

[[test]]
name = "e2e_real_llm"
path = "e2e_real_llm.rs"

[[test]]
name = "e2e_local_server"
path = "e2e_local_server.rs"

[[test]]
name = "e2e_real_agent"
path = "e2e_real_agent.rs"

[[test]]
name = "worker_test"
path = "worker_test.rs"

[[test]]
name = "server_test"
path = "server_test.rs"
