[package]
name = "cyber-agent-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
cyber-agent-proto = { path = "../proto" }
serde = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
