[package]
name = "cyber-agent-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
cyber-agent-model = { path = "../model" }
cyber-agent-tool = { path = "../tool" }
cyber-agent-proto = { path = "../proto" }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
