[package]
name = "cyber-agent-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
grpc = ["cyber-agent-proto/grpc", "dep:tonic", "dep:tokio", "dep:tokio-stream", "dep:futures-core"]

[dependencies]
cyber-agent-proto = { path = "../proto" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }

# gRPC (optional)
tonic = { version = "0.12", optional = true }
tokio = { version = "1", features = ["rt", "sync"], optional = true }
tokio-stream = { version = "0.1", optional = true }
futures-core = { version = "0.3", optional = true }
