[package]
name = "cyber-agent-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
cyber-agent-proto = { path = "../proto" }
cyber-agent-tool = { path = "../tool" }
cyber-agent-transport = { path = "../transport" }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
